<resources>
    <string name="app_name">GNSS Analyzer Plus</string>
    <string name="app_bar_title">GNSS Analyzer</string>
    <string name="title_permission">Need Location and Internet permissions</string>
    <string name="text_permission">GNSS Analyzer requires location and internet permission to work</string>
    <string name="ok">OK</string>
    <string name="exit">EXIT</string>
    <string name="gps_not_supported">GPS Provider not supported on this device</string>
    <string name="tv_latitude_label">Lat:</string>
    <string name="tv_longitude_label">Lon:</string>
    <string name="tv_date_label">Date:</string>
    <string name="tv_time_label">Time:</string>
    <string name="tv_ttff_label">TTFF(secs):</string>
    <string name="tv_error_label">Errors(m):</string>
    <string name="tv_speed_label">Speed(m/s):</string>
    <string name="tv_altitude_label">Altitude(m):</string>
    <string name="tv_bearing_label">Bearing:</string>
    <string name="tv_sat_count_label">Sat. Count:</string>
    <string name="tv_average_gps_cno_label">Average GPS C/No:</string>
    <string name="tv_average_glonass_cno_label">Average GLONASS C/No:</string>
    <string name="tv_average_beidou_cno_label">Average BEIDOU C/No:</string>
    <string name="tv_average_galileo_cno_label">Average GALILEO C/No:</string>
    <string name="gps_num_sats_value">%1$d/%2$d</string>
    <string name="gps_elevation_column_value">%1$.0f\u00B0</string>
    <string name="gps_azimuth_column_value">%1$.0f\u00B0</string>
    <string name="average_cno_value">%.2f (%d)</string>
    <string name="header_id">ID</string>
    <string name="header_flag">Flag</string>
    <string name="header_azimuth">Azim</string>
    <string name="header_elevation">Elev</string>
    <string name="header_snr">C/No</string>

</resources>
