<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:background="@color/colorPrimaryDark">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        android:layout_gravity="center"
        app:cardUseCompatPadding="true"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/colorCard"
        app:cardElevation="4dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">
            <TableRow>
                <TextView
                    style="@style/labels"
                    android:text="@string/tv_average_gps_cno_label" />
                <TextView
                    android:id="@+id/tv_average_gps_cno"
                    style="@style/values"/>
            </TableRow>
            <TableRow>
                <TextView
                    style="@style/labels"
                    android:text="@string/tv_average_glonass_cno_label" />
                <TextView
                    android:id="@+id/tv_average_glonass_cno"
                    style="@style/values"/>
            </TableRow>
            <TableRow>
                <TextView
                    style="@style/labels"
                    android:text="@string/tv_average_beidou_cno_label" />
                <TextView
                    android:id="@+id/tv_average_beidou_cno"
                    style="@style/values"/>
            </TableRow>
            <TableRow>
                <TextView
                    style="@style/labels"
                    android:text="@string/tv_average_galileo_cno_label" />
                <TextView
                    android:id="@+id/tv_average_galileo_cno"
                    style="@style/values"/>
            </TableRow>
        </TableLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        android:layout_gravity="center"
        app:cardUseCompatPadding="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:cardBackgroundColor="@color/colorCard"
        app:cardElevation="4dp">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">
            <TableRow>
                <TextView
                    style="@style/labels"
                    android:text="@string/tv_date_label"
                    />
                <TextView
                    android:id="@+id/tv_date"
                    style="@style/values"/>
                <TextView
                    style="@style/labels"
                    android:text="@string/tv_time_label" />
                <TextView
                    android:id="@+id/tv_time"
                    style="@style/values"/>
            </TableRow>
            <TableRow>
                <TextView
                    style="@style/labels"
                    android:text="@string/tv_latitude_label" />
                <TextView
                    android:id="@+id/tv_latitude"
                    style="@style/values"/>
                <TextView
                    style="@style/labels"
                    android:text="@string/tv_longitude_label" />
                <TextView
                    android:id="@+id/tv_longitude"
                    style="@style/values"/>
            </TableRow>
            <TableRow>
                <TextView
                    style="@style/labels"
                    android:text="@string/tv_ttff_label"
                    />
                <TextView
                    android:id="@+id/tv_ttff"
                    style="@style/values" />
                <TextView
                    style="@style/labels"
                    android:text="@string/tv_error_label" />
                <TextView
                    android:id="@+id/tv_error"
                    style="@style/values"/>
            </TableRow>
            <TableRow>
                <TextView
                    style="@style/labels"
                    android:text="@string/tv_speed_label"
                    />
                <TextView
                    android:id="@+id/tv_speed"
                    style="@style/values" />
                <TextView
                    style="@style/labels"
                    android:text="@string/tv_altitude_label" />
                <TextView
                    android:id="@+id/tv_altitude"
                    style="@style/values"/>
            </TableRow>
            <TableRow>
                <TextView
                    style="@style/labels"
                    android:text="@string/tv_bearing_label"
                    />
                <TextView
                    android:id="@+id/tv_bearing"
                    style="@style/values" />
                <TextView
                    style="@style/labels"
                    android:text="@string/tv_sat_count_label" />
                <TextView
                    android:id="@+id/tv_sat_count"
                    style="@style/values"/>
            </TableRow>
        </TableLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="@color/colorCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                    <TextView
                        android:layout_width="30dp"
                        android:layout_height="20dp"
                        android:textColor="#EEEEEE"
                        android:textStyle="bold"
                        android:text="@string/header_id"/>

                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="20dp"
                        android:textColor="#EEEEEE"
                        android:textStyle="bold"
                        android:text="@string/header_flag"/>

                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="20dp"
                        android:textColor="#EEEEEE"
                        android:textStyle="bold"
                        android:text="@string/header_azimuth"/>

                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="20dp"
                        android:textColor="#EEEEEE"
                        android:textStyle="bold"
                        android:text="@string/header_elevation"/>

                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="20dp"
                        android:textColor="#EEEEEE"
                        android:textStyle="bold"
                        android:text="@string/header_snr"/>

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/status_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>


        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>